--- a/employee-app/src/styles.scss
+++ b/employee-app/src/styles.scss
@@ -1,3 +1,6 @@
 :root {
   --primary-color: #536dfe;
 }
+
+html, body { height: 100%; }
+body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
