--- a/employee-app/src/app/components/department/department-create/department-create.component.html
+++ b/employee-app/src/app/components/department/department-create/department-create.component.html
@@ -1,14 +1,17 @@
+<div class="loader-container" *ngIf="loaderService.isLoading | async">
+  <mat-progress-bar mode="query"></mat-progress-bar>
+</div>
 <div class="container">
   <div class="row mt-5">
     <div class="col align-self-center">
-      <form>
+      <form [formGroup]="departmentCreateForm">
         <div class="mb-1">
           <label for="departmentName" class="form-label">Name</label>
           <input
             type="email"
             class="form-control"
             id="departmentName"
-            name="name"
+            formControlName="name"
           />
         </div>
       </form>
